# punten_telling_tik_spel

./: README.md  dashboard.html  index.html  test.html
pkg/: punten_telling_tik_spel.d.ts  punten_telling_tik_spel.js  punten_telling_tik_spel_bg.wasm.d.ts
punten_telling_tik_spel/: Cargo.toml
punten_telling_tik_spel/pkg/: package.json  punten_telling_tik_spel_bg.wasm
punten_telling_tik_spel/src/: inport_info.rs  lib.rs  location_date.rs  team.rs  tikker.rs
